--- a/he.html
+++ b/he.html
@@ -2,88 +2,94 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
-    <title>HE Wartung - Bosch V1.1</title>
+    <title>HE Wartungsübersicht</title>
     <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-auth-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-database-compat.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2"></script>
     <style>
-        :root { --bosch-red: #d50000; --bosch-blue: #003a6c; --bosch-gray: #eff1f2; --bosch-light-blue: #00b5e2; }
+        :root { --bosch-red: #d50000; --bosch-blue: #003a6c; --bosch-gray: #eff1f2; --bosch-green: #008a4f; --bosch-orange: #ffa500; --bosch-dark-red: #8b0000; }
         body { font-family: 'Segoe UI', sans-serif; background: var(--bosch-gray); margin: 0; padding: 0; display: flex; flex-direction: column; height: 100vh; overflow: hidden; }
-        .top-bar { height: 45px; width: 100%; background: linear-gradient(90deg, #d50000 0%, #00b5e2 50%, #008a4f 100%); display: flex; align-items: center; padding: 0 15px; color: white; font-weight: bold; }
+        .top-bar { height: 45px; width: 100%; background: linear-gradient(90deg, #d50000 0%, #003a6c 50%, #008a4f 100%); display: flex; align-items: center; padding: 0 15px; color: white; font-weight: bold; box-sizing: border-box; }
         .header { background: white; padding: 10px 20px; display: flex; justify-content: space-between; align-items: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1); }
         .main-layout { display: flex; flex: 1; padding: 20px; gap: 20px; overflow: hidden; }
-        .chart-area { flex: 3; background: white; padding: 20px; border-top: 4px solid var(--bosch-light-blue); }
-        .sidebar { flex: 1.5; background: white; border-top: 4px solid var(--bosch-blue); overflow-y: auto; padding: 10px; }
+        .chart-area { flex: 3; background: white; padding: 20px; border-top: 4px solid var(--bosch-blue); border-radius: 4px; }
+        .sidebar { flex: 1.5; background: white; border-top: 4px solid var(--bosch-blue); overflow-y: auto; padding: 10px; border-radius: 4px; }
         .row { display: flex; align-items: center; padding: 10px; border-bottom: 1px solid #eee; gap: 10px; border-left: 8px solid #ccc; margin-bottom: 5px; }
-        .btn-wp { background: var(--bosch-red); color: white; border: none; padding: 5px 10px; cursor: pointer; font-weight: bold; }
-        .btn-cycle { padding: 5px 10px; cursor: pointer; border: 1px solid #ccc; background: white; }
+        .btn-wp { background: var(--bosch-red); color: white; border: none; padding: 5px 10px; cursor: pointer; font-weight: bold; border-radius: 2px; }
+        .btn-cycle { padding: 5px 10px; cursor: pointer; border: 1px solid #ccc; background: white; font-weight: bold; border-radius: 2px; }
+        .btn-cycle:disabled, .btn-wp:disabled { opacity: 0.3; cursor: not-allowed; }
         @keyframes blink-red { 0% { background: #fff; } 50% { background: #ffcccc; } 100% { background: #fff; } }
         .blink { animation: blink-red 1s infinite; }
+        #auth-status { font-size: 12px; color: #666; }
     </style>
 </head>
 <body>
     <div class="top-bar">HE Wartungsübersicht</div>
     <div class="header">
-        <span style="font-size: 24px; color: var(--bosch-red); font-weight: 900;">BOSCH</span>
-        <button class="btn-wp" onclick="window.close()">❌ Fenster schließen</button>
+        <div><span style="font-size: 24px; color: var(--bosch-red); font-weight: 900;">BOSCH</span><span id="auth-status" style="margin-left: 15px;">Prüfe Berechtigung...</span></div>
+        <button class="btn-wp" onclick="window.close()">❌ Schließen</button>
     </div>
-    <div class="main-layout">
-        <div class="chart-area"><canvas id="mainChart"></canvas></div>
-        <div class="sidebar" id="machineList">Lade...</div>
-    </div>
-
+    <div class="main-layout"><div class="chart-area"><canvas id="mainChart"></canvas></div><div class="sidebar" id="machineList">Lade Daten...</div></div>
     <script>
-        const firebaseConfig = { apiKey: "AIzaSyD6xGCtU-felOyO_BRsFnVlB4yhC46FgYg", databaseURL: "https://bosch-agie-wartung-default-rtdb.europe-west1.firebasedatabase.app" };
+        const firebaseConfig = { apiKey: "AIzaSyD6xGCtU-felOyO_BRsFnVlB4yhC46FgYg", authDomain: "bosch-agie-wartung.firebaseapp.com", databaseURL: "https://bosch-agie-wartung-default-rtdb.europe-west1.firebasedatabase.app", projectId: "bosch-agie-wartung" };
         firebase.initializeApp(firebaseConfig);
-        const db = firebase.database();
-        let chart = null;
+        const db = firebase.database(), auth = firebase.auth();
+        let chart = null, currentUser = null;
+
+        auth.onAuthStateChanged(user => {
+            currentUser = user;
+            document.getElementById('auth-status').innerText = user ? `Eingeloggt: ${user.email}` : "⚠️ Nur Lesemodus";
+            document.querySelectorAll('.btn-wp, .btn-cycle').forEach(btn => btn.disabled = !user);
+        });
 
         db.ref('maintenanceStateHE').on('value', snap => {
-            const val = snap.val() || {};
-            const raw = val.cloudRawData || [];
-            const offsets = val.heOffsets || {};
-            const cycles = val.extraCycles || {};
-            
+            const val = snap.val() || {}, raw = val.cloudRawData || [], offsets = val.heOffsets || {}, cycles = val.extraCycles || {};
             const data = raw.map(item => {
-                const id = item.StationNo;
-                const ist = (parseInt(item.Parts) || 0) - (offsets[id] || 0);
-                const cyc = cycles[id] || 0;
-                const rest = (156000 + cyc * 156000) - ist;
-                let color = "#008a4f";
-                if(rest <= 0) color = "#8b0000";
-                else if(rest <= 4800) color = "#d50000";
-                else if(rest <= 19500) color = "#ffa500";
-                return { id, rest, ist, color, cyc };
+                const id = item.STATIONNO, totalParts = parseInt(item.Parts) || 0, offset = offsets[id] || 0, ist = totalParts - offset, cyc = cycles[id] || 0, target = 156000 + (cyc * 156000), rest = target - ist;
+                return { id, rest, ist, color: getC(rest), cyc, totalParts };
             }).sort((a,b) => a.rest - b.rest);
-
-            renderList(data);
-            renderChart(data);
+            renderList(data); renderChart(data);
         });
+
+        function getC(r) { return r <= 0 ? "#8b0000" : (r <= 4800 ? "#d50000" : (r <= 19500 ? "#ffa500" : "#008a4f")); }
 
         function renderList(data) {
             document.getElementById('machineList').innerHTML = data.map(d => `
                 <div class="row ${d.rest <= 0 ? 'blink' : ''}" style="border-left-color:${d.color}">
-                    <div style="flex:1"><b>HE-${d.id}</b></div>
+                    <div style="flex:1"><b>H-${d.id}</b></div>
                     <div style="flex:1; text-align:right;"><b>${d.rest.toLocaleString()}</b></div>
-                    <button class="btn-wp" onclick="resetWP('${d.id}')">WP</button>
+                    <button class="btn-wp" onclick="resetWP('${d.id}', ${d.totalParts})">WP</button>
                     <button class="btn-cycle" onclick="changeC('${d.id}', -1)">-</button>
-                    <span>${d.cyc}</span>
+                    <span style="min-width: 20px; text-align: center; font-weight: bold;">${d.cyc}</span>
                     <button class="btn-cycle" onclick="changeC('${d.id}', 1)">+</button>
                 </div>`).join('');
         }
 
         async function changeC(id, v) {
-            const s = await db.ref(`maintenanceStateHE/extraCycles/${id}`).once('value');
-            db.ref(`maintenanceStateHE/extraCycles/${id}`).set(Math.max(0, (s.val()||0) + v));
+            if(!currentUser) return;
+            const refCyc = db.ref(`maintenanceStateHE/extraCycles/${id}`);
+            const refAssign = db.ref(`dashboardAssignments/H${id}`);
+            const refBackup = db.ref(`maintenanceStateHE/lastEinsteller/H${id}`);
+            const snap = await refCyc.once('value');
+            const newVal = Math.max(0, (snap.val() || 0) + v);
+            if (v > 0) {
+                const snapAssign = await refAssign.once('value');
+                if(snapAssign.val()) await refBackup.set(snapAssign.val());
+                await refAssign.set("");
+            } else if (v < 0) {
+                const snapBackup = await refBackup.once('value');
+                if(snapBackup.val()) await refAssign.set(snapBackup.val());
+            }
+            await refCyc.set(newVal);
         }
 
-        async function resetWP(id) {
-            if(confirm("WP-Reset für HE-"+id+"?")) {
-                const s = await db.ref(`maintenanceStateHE/heOffsets/${id}`).once('value');
-                db.ref(`maintenanceStateHE/heOffsets/${id}`).set((s.val()||0) + 156000);
-                db.ref(`maintenanceStateHE/extraCycles/${id}`).set(0);
-            }
+        async function resetWP(id, totalParts) {
+            if(!currentUser || !confirm(`Reset für H-${id}?`)) return;
+            await db.ref(`maintenanceStateHE/heOffsets/${id}`).set(totalParts);
+            await db.ref(`maintenanceStateHE/extraCycles/${id}`).set(0);
+            await db.ref(`dashboardAssignments/H${id}`).set("");
         }
 
         function renderChart(data) {
@@ -91,26 +97,8 @@
             if(chart) chart.destroy();
             chart = new Chart(ctx, {
                 type: 'bar', plugins: [ChartDataLabels],
-                data: { labels: data.map(d=>"HE-"+d.id), datasets: [{ data: data.map(d=>d.rest), backgroundColor: data.map(d=>d.color) }] },
-                options: { 
-                    responsive: true, maintainAspectRatio: false, 
-                    plugins: { 
-                        legend: { display: false }, 
-                        tooltip: {
-                            callbacks: {
-                                label: function(context) {
-                                    const d = data[context.dataIndex];
-                                    return [
-                                        `Offene Wartung: Standard`,
-                                        `Gesamt Stückzahl seit WP-Reset: ${d.ist.toLocaleString()}`,
-                                        `Rest Stückzahl bis Wartung: ${d.rest.toLocaleString()}`
-                                    ];
-                                }
-                            }
-                        },
-                        datalabels: { anchor: 'end', align: 'top', rotation: -90, font: { weight: 'bold' } } 
-                    } 
-                }
+                data: { labels: data.map(d => "H-" + d.id), datasets: [{ data: data.map(d => d.rest), backgroundColor: data.map(d => d.color) }] },
+                options: { responsive: true, maintainAspectRatio: false, plugins: { legend: { display: false }, datalabels: { anchor: 'end', align: 'top', rotation: -90, font: { weight: 'bold' } } } }
             });
         }
     </script>
