--- a/he.html
+++ b/he.html
@@ -2,26 +2,23 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
-    <title>HE Wartungsübersicht</title>
+    <title>HE Wartung</title>
     <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-auth-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-database-compat.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2"></script>
     <style>
-        :root { --bosch-red: #d50000; --bosch-blue: #003a6c; --bosch-gray: #eff1f2; --bosch-green: #008a4f; --bosch-orange: #ffa500; --bosch-dark-red: #8b0000; }
-        body { font-family: 'Segoe UI', sans-serif; background: var(--bosch-gray); margin: 0; padding: 0; display: flex; flex-direction: column; height: 100vh; overflow: hidden; }
-        .top-bar { height: 45px; width: 100%; background: linear-gradient(90deg, #d50000 0%, #003a6c 50%, #008a4f 100%); display: flex; align-items: center; padding: 0 15px; color: white; font-weight: bold; box-sizing: border-box; }
+        :root { --bosch-red: #d50000; --bosch-blue: #003a6c; --bosch-gray: #eff1f2; }
+        body { font-family: 'Segoe UI', sans-serif; background: var(--bosch-gray); margin: 0; padding: 0; display: flex; flex-direction: column; height: 100vh; }
+        .top-bar { height: 45px; width: 100%; background: linear-gradient(90deg, #d50000 0%, #003a6c 50%, #008a4f 100%); display: flex; align-items: center; padding: 0 15px; color: white; font-weight: bold; }
         .header { background: white; padding: 10px 20px; display: flex; justify-content: space-between; align-items: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1); }
         .main-layout { display: flex; flex: 1; padding: 20px; gap: 20px; overflow: hidden; }
         .chart-area { flex: 3; background: white; padding: 20px; border-top: 4px solid var(--bosch-blue); border-radius: 4px; }
         .sidebar { flex: 1.5; background: white; border-top: 4px solid var(--bosch-blue); overflow-y: auto; padding: 10px; border-radius: 4px; }
         .row { display: flex; align-items: center; padding: 10px; border-bottom: 1px solid #eee; gap: 10px; border-left: 8px solid #ccc; margin-bottom: 5px; }
-        .btn-wp { background: var(--bosch-red); color: white; border: none; padding: 5px 10px; cursor: pointer; font-weight: bold; border-radius: 2px; }
-        .btn-cycle { padding: 5px 10px; cursor: pointer; border: 1px solid #ccc; background: white; font-weight: bold; border-radius: 2px; }
-        .btn-cycle:disabled, .btn-wp:disabled { opacity: 0.3; cursor: not-allowed; }
-        @keyframes blink-red { 0% { background: #fff; } 50% { background: #ffcccc; } 100% { background: #fff; } }
-        .blink { animation: blink-red 1s infinite; }
+        .btn-wp { background: var(--bosch-red); color: white; border: none; padding: 5px 10px; cursor: pointer; font-weight: bold; }
+        .btn-cycle { padding: 5px 10px; cursor: pointer; border: 1px solid #ccc; background: white; font-weight: bold; }
         #auth-status { font-size: 12px; color: #666; }
     </style>
 </head>
@@ -31,7 +28,8 @@
         <div><span style="font-size: 24px; color: var(--bosch-red); font-weight: 900;">BOSCH</span><span id="auth-status" style="margin-left: 15px;">Prüfe Berechtigung...</span></div>
         <button class="btn-wp" onclick="window.close()">❌ Schließen</button>
     </div>
-    <div class="main-layout"><div class="chart-area"><canvas id="mainChart"></canvas></div><div class="sidebar" id="machineList">Lade Daten...</div></div>
+    <div class="main-layout"><div class="chart-area"><canvas id="mainChart"></canvas></div><div class="sidebar" id="machineList">Lade...</div></div>
+
     <script>
         const firebaseConfig = { apiKey: "AIzaSyD6xGCtU-felOyO_BRsFnVlB4yhC46FgYg", authDomain: "bosch-agie-wartung.firebaseapp.com", databaseURL: "https://bosch-agie-wartung-default-rtdb.europe-west1.firebasedatabase.app", projectId: "bosch-agie-wartung" };
         firebase.initializeApp(firebaseConfig);
@@ -43,6 +41,17 @@
             document.getElementById('auth-status').innerText = user ? `Eingeloggt: ${user.email}` : "⚠️ Nur Lesemodus";
             document.querySelectorAll('.btn-wp, .btn-cycle').forEach(btn => btn.disabled = !user);
         });
+
+        async function writeLog(action, machine, detail, rest, gesamt, paket) {
+            const user = auth.currentUser ? auth.currentUser.email : "Unbekannt";
+            const status = (action.includes("STORNO")) ? "Storniert" : (rest <= 0 ? "Erledigt" : "Erledigt vorgezogen");
+            const j = new Date();
+            await db.ref('auditLog').push({
+                Datum: j.toLocaleDateString('de-DE'), Uhrzeit: j.toLocaleTimeString('de-DE'),
+                Benutzer: user, Aktion: action, Maschine: machine, Details: detail,
+                Reststückzahl: rest, Gesamtstückzahl: gesamt, Paket: paket, Status: status
+            });
+        }
 
         db.ref('maintenanceStateHE').on('value', snap => {
             const val = snap.val() || {}, raw = val.cloudRawData || [], offsets = val.heOffsets || {}, cycles = val.extraCycles || {};
@@ -57,49 +66,52 @@
 
         function renderList(data) {
             document.getElementById('machineList').innerHTML = data.map(d => `
-                <div class="row ${d.rest <= 0 ? 'blink' : ''}" style="border-left-color:${d.color}">
+                <div class="row" style="border-left-color:${d.color}">
                     <div style="flex:1"><b>H-${d.id}</b></div>
                     <div style="flex:1; text-align:right;"><b>${d.rest.toLocaleString()}</b></div>
                     <button class="btn-wp" onclick="resetWP('${d.id}', ${d.totalParts})">WP</button>
                     <button class="btn-cycle" onclick="changeC('${d.id}', -1)">-</button>
-                    <span style="min-width: 20px; text-align: center; font-weight: bold;">${d.cyc}</span>
+                    <span style="min-width: 20px; text-align: center;">${d.cyc}</span>
                     <button class="btn-cycle" onclick="changeC('${d.id}', 1)">+</button>
                 </div>`).join('');
         }
 
         async function changeC(id, v) {
             if(!currentUser) return;
-            const refCyc = db.ref(`maintenanceStateHE/extraCycles/${id}`);
-            const refAssign = db.ref(`dashboardAssignments/H${id}`);
-            const refBackup = db.ref(`maintenanceStateHE/lastEinsteller/H${id}`);
-            const snap = await refCyc.once('value');
-            const newVal = Math.max(0, (snap.val() || 0) + v);
+            const snapS = await db.ref(`maintenanceStateHE`).once('value');
+            const val = snapS.val(), raw = val.cloudRawData.find(m => m.STATIONNO == id);
+            const total = parseInt(raw.Parts), off = (val.heOffsets && val.heOffsets[id]) || 0, cyc = (val.extraCycles && val.extraCycles[id]) || 0;
+            const rest = (156000 + (cyc * 156000)) - (total - off);
+            const newVal = Math.max(0, cyc + v);
+
             if (v > 0) {
-                const snapAssign = await refAssign.once('value');
-                if(snapAssign.val()) await refBackup.set(snapAssign.val());
-                await refAssign.set("");
-            } else if (v < 0) {
-                const snapBackup = await refBackup.once('value');
-                if(snapBackup.val()) await refAssign.set(snapBackup.val());
+                const rA = db.ref(`dashboardAssignments/H${id}`), rB = db.ref(`maintenanceStateHE/lastEinsteller/H${id}`);
+                const sA = await rA.once('value'); if(sA.val()) await rB.set(sA.val());
+                await rA.set("");
+                await writeLog("Paket-Erhöhung (+)", `H-${id}`, `Wechsel zu P${newVal}`, rest, total, `P${cyc}`);
+            } else {
+                const rB = db.ref(`maintenanceStateHE/lastEinsteller/H${id}`);
+                const sB = await rB.once('value'); if(sB.val()) await db.ref(`dashboardAssignments/H${id}`).set(sB.val());
+                await writeLog("STORNO (-)", `H-${id}`, `Zurück auf P${newVal}`, rest, total, `P${cyc}`);
             }
-            await refCyc.set(newVal);
+            await db.ref(`maintenanceStateHE/extraCycles/${id}`).set(newVal);
         }
 
         async function resetWP(id, totalParts) {
             if(!currentUser || !confirm(`Reset für H-${id}?`)) return;
+            const snapS = await db.ref(`maintenanceStateHE`).once('value');
+            const val = snapS.val(), off = (val.heOffsets && val.heOffsets[id]) || 0, cyc = (val.extraCycles && val.extraCycles[id]) || 0;
+            const rest = (156000 + (cyc * 156000)) - (totalParts - off);
             await db.ref(`maintenanceStateHE/heOffsets/${id}`).set(totalParts);
             await db.ref(`maintenanceStateHE/extraCycles/${id}`).set(0);
             await db.ref(`dashboardAssignments/H${id}`).set("");
+            await writeLog("WP-Reset", `H-${id}`, "Grundwartung", rest, totalParts, "Komplett");
         }
 
         function renderChart(data) {
             const ctx = document.getElementById('mainChart').getContext('2d');
             if(chart) chart.destroy();
-            chart = new Chart(ctx, {
-                type: 'bar', plugins: [ChartDataLabels],
-                data: { labels: data.map(d => "H-" + d.id), datasets: [{ data: data.map(d => d.rest), backgroundColor: data.map(d => d.color) }] },
-                options: { responsive: true, maintainAspectRatio: false, plugins: { legend: { display: false }, datalabels: { anchor: 'end', align: 'top', rotation: -90, font: { weight: 'bold' } } } }
-            });
+            chart = new Chart(ctx, { type: 'bar', plugins: [ChartDataLabels], data: { labels: data.map(d => "H-" + d.id), datasets: [{ data: data.map(d => d.rest), backgroundColor: data.map(d => d.color) }] }, options: { responsive: true, maintainAspectRatio: false, plugins: { legend: { display: false }, datalabels: { anchor: 'end', align: 'top', rotation: -90, font: { weight: 'bold' } } } } });
         }
     </script>
 </body>
